# IA-25-26

./: .gitignore
P1-Busquedas-No-Informadas/: texto.txt
P1-Busquedas-No-Informadas/src/: funciones_cliente.cc  funciones_cliente.h  grafo.cc  grafo.h  texto.txt
P1-Busquedas-No-Informadas_Modificaciones/: CMakeLists.txt
P1-Busquedas-No-Informadas_Modificaciones/src/: busquedas_no_informadas_main.cc  funciones_cliente.cc  grafo.cc  grafo.h
P2-Busquedas-Informadas/: CMakeLists.txt
P2-Busquedas-Informadas/src/: busqueda_A_star.cc  busqueda_A_star.h  busqueda_informada.cc  busqueda_informada.h  busquedas_informadas_main.cc  casilla.cc  casilla.h  funciones_cliente.cc  funciones_cliente.h  laberinto.cc  laberinto.h
P2-Busquedas-Informadas/test/: MODI.txt
